@@ -7,6 +7,10 @@ Version 0.6.0dev (unreleased)
 
 - ...
 
+- Added debug option to log exceptions for totally misbehaving scripts
+
+- Slight changes to service manager
+
 Version 0.5.0 (2008-04-12)
 --------------------------
 
